--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.2.3
   shared_preferences: ^2.5.4
   google_fonts: ^7.0.0
+  provider: ^6.1.5+1
 
 
 dev_dependencies:
