--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.5.4
   google_fonts: ^7.0.0
   provider: ^6.1.5+1
+  image_picker: ^1.2.1
 
 
 dev_dependencies:
